Fix white space between Header and Footer
This white spaces should be same as default interline white space.

--- a/src/css/header/logo.css
+++ b/src/css/header/logo.css
@@ -1,7 +1,14 @@
 .logo {
+	--margin-bottom: calc(
+		(var(--line-height-default) - 1) * var(--font-size-default) -
+		(var(--line-height-default) - 1) * var(--font-size-small) / 2 -
+		(var(--line-height-default) - 1) * var(--font-size-small) / 2
+	);
+
 	font-weight: bold;
 	margin-right: auto;
-	padding-right: 1rem;
+	margin-bottom: 0.132rem;
+	margin-bottom: var(--margin-bottom);
 	padding-right: var(--space-small);
 	text-transform: uppercase;
 }
