--- a/src/css/header/pages.css
+++ b/src/css/header/pages.css
@@ -1,14 +1,12 @@
 .pages {
 	--display: flex;
 	--flex-wrap: wrap;
-	--margin-top: 0;
 
 	display: var(--display);
 	flex-grow: var(--flex-grow);
 	flex-wrap: var(--flex-wrap);
 	list-style-type: none;
-	margin-top: 0.618rem;
-	margin-top: var(--margin-top);
+	margin-top: 0;
 	padding-left: 0;
 }
 
